--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
-S3_BUCKET=""
-SECRET_KEY=""
+REACT_APP_BASH_URL = "https://psapi.voot.com/jio/voot/v1/voot-web"
+REACT_APP_API_KEY = "87ff482ba3b3a353403d84db264492d4"
