--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "redux": "^4.1.2",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "framer-motion": "^6.2.3",
+    "react-icons": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
